observer when update, delete system, subsytem, module, action, permission

--- a/resources/css/_variable.css
+++ b/resources/css/_variable.css
@@ -2,11 +2,8 @@
     --tw-primary: #002147;
 
     --tw-white: #ffffff;
-    --tw-header-table: #002147d5;
+    --tw-header-table: #002147;
 
-    --tw-yellowFF: #FFD700;
-    --tw-redD1: #D12030;
-    --tw-green14: #149E53;
     --tw-black54: #545454;
 
     /* font */
@@ -37,7 +34,6 @@
     /* black */
     --tw-black-300: #22313f;
     --tw-black-400: #222222;
-    --tw-black54: #545454;
     --tw-blackBD: #bdbdbd;
     --tw-black27: #272727;
     --tw-black22: #222222;
