api get all log for user

--- a/resources/css/_variable.css
+++ b/resources/css/_variable.css
@@ -60,5 +60,5 @@
 
      /* font */
      --tw-fontSecondary: 'Meiryo', sans-serif;
-     --tw-fontPrimary: 'Noto Sans JP', sans-serif;
+     --tw-fontPrimary: 'Roboto', sans-serif;
 }
